# TaikoController

./: .gitignore
Ondsel/: TaikoController.FCStd
PCB/: TaikoController.kicad_pcb  TaikoController.kicad_prl  TaikoController.kicad_pro  TaikoController.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
PCB/Tiny2040/tiny2040.pretty/: BOURNS-3362P_pot.kicad_mod  tiny2040.kicad_mod
PCB/jlcpcb/: project.db
PCB/mcu.pretty/: rp2040-zero-tht-pads.kicad_mod
c/: CMakeLists.txt
c/include/: core1.h  input_queue.h
c/src/: core1.c  main.c
